--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     border: 0;
     outline: 0;
     font-size: 100%;
+	font-family: Arial,Helvetica,sans-serif;
     vertical-align: baseline;
     background: 0 0
 }
@@ -81,7 +82,6 @@ body {
     margin-top: 20px;
     color: #fff;
     font-weight: 700;
-    font-family: Arial,Helvetica,sans-serif
 }
 
 @media screen and (max-width: 1082px) {
@@ -397,4 +397,12 @@ li.remove_frame a:hover {
 }
 
 .fdadnr {
+}
+
+.apps {
+	margin: 20px;
+	color: #666;
+}
+.apps input[type="radio"]:checked + label {
+	color: #f8bc05
 }
